sw 600 angepasst, ist wohl für foldable Handys xD, Button abstände größer, Text größe angepasst

--- a/app/src/main/res/layout-sw320dp/activity_hauptspiel.xml
+++ b/app/src/main/res/layout-sw320dp/activity_hauptspiel.xml
@@ -58,8 +58,8 @@
         android:layout_width="150dp"
         android:layout_height="70dp"
         android:layout_marginTop="190dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/pixil_button_main"
         android:fontFamily="@font/pixel_art"
@@ -78,6 +78,7 @@
         android:layout_width="fill_parent"
         android:layout_height="260dp"
         android:layout_marginTop="80dp"
+        android:layout_marginBottom="150dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/tv_aufgabe"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,11 +92,11 @@
         android:id="@+id/button5"
         android:layout_width="150dp"
         android:layout_height="70dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="190dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/pixil_button_main"
         android:fontFamily="@font/pixel_art"
@@ -116,23 +117,21 @@
         android:id="@+id/tv_aufgabe"
         android:layout_width="353dp"
         android:layout_height="117dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
+        android:autoSizeMaxTextSize="100sp"
+        android:autoSizeMinTextSize="12sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
         android:gravity="center_horizontal"
         android:text="TextView"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:autoSizeTextType="uniform"
-        android:autoSizeMinTextSize="12sp"
-        android:autoSizeMaxTextSize="100sp"
-        android:autoSizeStepGranularity="2sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_kopf"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_aufgabenvorhanden"
@@ -166,11 +165,11 @@
         android:id="@+id/btn_kopf"
         android:layout_width="159dp"
         android:layout_height="151dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="140dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         android:background="@drawable/pixil_button_hauptspiel"
         android:onClick="btnimg_kopf"
         android:scaleType="fitCenter"
@@ -186,8 +185,8 @@
         android:layout_width="159dp"
         android:layout_height="151dp"
         android:layout_marginTop="140dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:background="@drawable/pixil_button_hauptspiel"
         android:onClick="btnimg_zahl"
         android:scaleType="fitCenter"
@@ -276,8 +275,9 @@
     <ImageView
         android:id="@+id/video_ende"
         android:layout_width="0dp"
-        android:layout_height="258dp"
+        android:layout_height="230dp"
         android:layout_marginTop="80dp"
+        android:layout_marginBottom="150dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/tv_aufgabe"
         app:layout_constraintEnd_toEndOf="parent"
