--- a/app/src/main/res/layout-sw600dp/activity_hauptspiel.xml
+++ b/app/src/main/res/layout-sw600dp/activity_hauptspiel.xml
@@ -57,7 +57,7 @@
 
     <Button
         android:id="@+id/btn_zufall"
-        android:layout_width="195dp"
+        android:layout_width="190dp"
         android:layout_height="63dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="60dp"
@@ -84,16 +84,15 @@
         android:id="@+id/videoBB"
         android:layout_width="487dp"
         android:layout_height="281dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="88dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_spieleranzeige" />
 
-
     <Button
         android:id="@+id/button5"
-        android:layout_width="195dp"
+        android:layout_width="190dp"
         android:layout_height="63dp"
         android:layout_marginStart="60dp"
         android:layout_marginLeft="60dp"
@@ -120,14 +119,14 @@
 
     <TextView
         android:id="@+id/tv_aufgabe"
-        android:layout_width="431dp"
-        android:layout_height="180dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="314dp"
+        android:layout_height="207dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="16dp"
         android:autoSizeMaxTextSize="100sp"
         android:autoSizeMinTextSize="12sp"
-        android:autoSizeTextType="uniform"
         android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
         android:text="TextView"
         android:textAllCaps="false"
         android:textColor="?attr/primaryTitleColor"
@@ -178,7 +177,9 @@
         android:id="@+id/btn_kopf"
         android:layout_width="140dp"
         android:layout_height="140dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="150dp"
         android:background="@drawable/pixil_button_hauptspiel"
         android:onClick="btnimg_kopf"
         android:scaleType="fitCenter"
@@ -186,10 +187,10 @@
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/btn_zufall"
         app:layout_constraintEnd_toEndOf="@+id/img_background"
-        app:layout_constraintHorizontal_bias="0.387"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_spieleranzeige"
-        app:layout_constraintVertical_bias="0.492" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/btn_zahl"
@@ -197,14 +198,16 @@
         android:layout_height="140dp"
         android:layout_marginStart="80dp"
         android:layout_marginLeft="80dp"
-        android:layout_marginTop="208dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="150dp"
+        android:layout_marginRight="150dp"
         android:background="@drawable/pixil_button_hauptspiel"
         android:onClick="btnimg_zahl"
         android:scaleType="fitCenter"
         android:src="@drawable/pixel_zahl"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/btn_kopf"
         app:layout_constraintTop_toBottomOf="@+id/tv_spieleranzeige" />
 
@@ -299,8 +302,8 @@
     <ImageView
         android:id="@+id/video_ende"
         android:layout_width="487dp"
-        android:layout_height="281dp"
-        android:layout_marginTop="70dp"
+        android:layout_height="260dp"
+        android:layout_marginTop="88dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
