String angepasst, Shop auskommentiert, Sprachen unvisible gestellt

--- a/app/src/main/res/layout-sw720dp/activity_einstellungen.xml
+++ b/app/src/main/res/layout-sw720dp/activity_einstellungen.xml
@@ -105,6 +105,7 @@
         android:textColor="?attr/primaryTitleColor"
         android:textSize="36sp"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/btn_sprache_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -124,6 +125,7 @@
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
         android:textSize="48sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
