--- a/app/src/main/res/layout-sw320dp/activity_einstellungen.xml
+++ b/app/src/main/res/layout-sw320dp/activity_einstellungen.xml
@@ -94,6 +94,7 @@
         android:textColor="?attr/primaryTitleColor"
         android:textSize="36sp"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/btn_sprache_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -112,6 +113,7 @@
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
         android:textSize="24sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
