--- a/app/src/main/res/layout-sw600dp/activity_einstellungen.xml
+++ b/app/src/main/res/layout-sw600dp/activity_einstellungen.xml
@@ -102,6 +102,7 @@
         android:textColor="?attr/primaryTitleColor"
         android:textSize="36sp"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/btn_sprache_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,6 +122,7 @@
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
         android:textSize="34sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
