--- a/app/src/main/res/layout-sw320dp/activity_main.xml
+++ b/app/src/main/res/layout-sw320dp/activity_main.xml
@@ -32,6 +32,7 @@
         android:ems="10"
         android:inputType="numberSigned"
         android:minHeight="48dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numberPicker" />
 
@@ -206,6 +207,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
         app:layout_constraintVertical_bias="0.0" />
+
+    <ImageButton
+        android:id="@+id/rundenbasis_info"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
+        android:background="@drawable/pixil_button_main"
+        android:onClick="btn_info_rundenbasis"
+        android:scaleType="fitCenter"
+        android:src="@drawable/pixel_info"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.769"
+        app:layout_constraintStart_toEndOf="@+id/cb_kinder"
+        app:layout_constraintTop_toBottomOf="@+id/numberPicker" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
