--- a/app/src/main/res/layout-sw720dp/activity_main.xml
+++ b/app/src/main/res/layout-sw720dp/activity_main.xml
@@ -186,7 +186,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="350dp"
         android:layout_marginLeft="350dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:minHeight="48dp"
         android:text="@string/rundenbasis"
         android:textSize="40sp"
@@ -202,16 +202,33 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="350dp"
         android:layout_marginRight="350dp"
         android:ems="10"
         android:inputType="numberSigned"
         android:minHeight="48dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/cb_kinder"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
+    <ImageButton
+        android:id="@+id/rundenbasis_info"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
+        android:background="@drawable/pixil_button_main"
+        android:onClick="btn_info_rundenbasis"
+        android:scaleType="fitCenter"
+        android:src="@drawable/pixel_info"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.356"
+        app:layout_constraintStart_toEndOf="@+id/cb_kinder"
+        app:layout_constraintTop_toBottomOf="@+id/numberPicker" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
