Info Zufalls Text eingefügt

--- a/app/src/main/res/values-de/String_Deutsch.xml
+++ b/app/src/main/res/values-de/String_Deutsch.xml
@@ -28,6 +28,7 @@
     <string name="anzahlshots">Schluckanzahl:</string>
     <string name="rundenbasis">Rundenbasis</string>
     <string name="rundenbasis_info">Wenn du Rundenbasis anklickst, kannst du die maximale Anzahl der Runden in diesem Spiel einstellen. Sobald jemand verloren hat ist eine Runde vorbei</string>
+    <string name="zufall_info">Wenn ihr die Zufallsoption einschaltet, dann ist die Reihenfolge in welcher die Spieler dran kommen zufällig. Ich mein, das sagt ja schon der Name.</string>
     <!-- Alerts -->
     <!-- Kein nickanme eingetragen -->
     <string name="alter_spielername_title">Spielername leer</string>
