--- a/app/src/main/res/layout-sw720dp/activity_a_c_bearbeiten.xml
+++ b/app/src/main/res/layout-sw720dp/activity_a_c_bearbeiten.xml
@@ -46,8 +46,8 @@
         android:id="@+id/et_Aufgabe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:autofillHints=""
         android:layout_marginTop="50dp"
+        android:autofillHints=""
         android:ems="15"
         android:gravity="start|top"
         android:hint="@string/hint_aufgabe"
@@ -71,5 +71,27 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="791dp"
+        android:layout_height="278dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:autoSizeTextType="uniform"
+        android:gravity="center_horizontal"
+        android:text="@string/infoBearbeiten"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="?attr/primaryTitleColor"
+        android:textColorHint="?attr/primaryTitleColor"
+        app:layout_constraintBottom_toTopOf="@+id/btn_add"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_Aufgabe"
+        app:layout_constraintVertical_bias="0.35" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
