--- a/app/src/main/res/layout/activity_a_c_bearbeiten.xml
+++ b/app/src/main/res/layout/activity_a_c_bearbeiten.xml
@@ -24,7 +24,7 @@
         android:id="@+id/btn_add"
         android:layout_width="150dp"
         android:layout_height="35dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/pixil_button_main"
         android:fontFamily="@font/pixel_art"
         android:gravity="center"
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
         android:layout_marginLeft="6dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="16dp"
         android:autofillHints=""
         android:ems="13"
         android:gravity="start|top"
@@ -78,5 +78,27 @@
         app:layout_constraintStart_toEndOf="@+id/et_Aufgabe"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="164dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:autoSizeTextType="uniform"
+        android:gravity="center_horizontal"
+        android:text="@string/infoBearbeiten"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="?attr/primaryTitleColor"
+        android:textColorHint="?attr/primaryTitleColor"
+        app:layout_constraintBottom_toTopOf="@+id/btn_add"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.32"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_Aufgabe"
+        app:layout_constraintVertical_bias="0.23" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
