kp was geändert bitte testen

--- a/app/src/main/res/values-de/String_Deutsch.xml
+++ b/app/src/main/res/values-de/String_Deutsch.xml
@@ -171,7 +171,7 @@
 
 
     <!-- Kategorie1-->
-    <string name="kategroie1">Ich hab` noch nie </string>
+    <string name="kategroie1">Ich hab noch nie </string>
     <!-- Kategorie 1 Erklärung -->
     <string name="alter_kategorie_title1">Spielregel: Ich hab` noch nie</string>
     <string name="alter_kategorie_message1">Trinken muss jeder, der es getan hat. Hat es keiner getan, trinkt nur der Spieler, der die Münze geworfen hat. Hier wird in der Gruppe getrunken.</string>
