--- a/app/src/main/res/layout-sw480dp/activity_credits.xml
+++ b/app/src/main/res/layout-sw480dp/activity_credits.xml
@@ -48,7 +48,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="44dp"
         android:fontFamily="@font/pixel_art"
         android:text="@string/credits"
         android:textColor="?attr/primaryTitleColor"
@@ -63,7 +63,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/pixel_art"
         android:text="@string/ueberuns"
         android:textColor="?attr/primaryTitleColor"
@@ -71,6 +71,7 @@
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -78,7 +79,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/pixel_art"
         android:text="@string/teile"
         android:textColor="?attr/primaryTitleColor"
@@ -93,7 +94,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/pixel_art"
         android:text="@string/contactus"
         android:textColor="?attr/primaryTitleColor"
