Dynamischer Text Einstellung

--- a/app/src/main/res/values-de/String_Deutsch.xml
+++ b/app/src/main/res/values-de/String_Deutsch.xml
@@ -117,8 +117,12 @@
     <string name="fuenfzig">+50</string>
     <string name="rundenerklärungoben">Schaut euch Werbung an, um</string>
     <string name="rundenerklärungunten">Runden ohne Unterbrechungen zu spielen.</string>
-    <string name="dark">Darkmode</string>
+    <string name="dark_an">Darkmode an</string>
+    <string name="dark_aus">Darkmode aus</string>
+    <string name="dark">Darkmode aus</string>
     <string name="switch_video_an">Münzwurf an</string>
+    <string name="switch_video">Münzwurf an</string>
+    <string name="switch_video_aus">Münzwurf aus</string>
     <string name="btn_sprache_speichern">Sprache Speichern</string>
 
     <!--Alerts -->
@@ -171,7 +175,7 @@
 
 
     <!-- Kategorie1-->
-    <string name="kategroie1">Ich hab noch nie </string>
+    <string name="kategroie1">Ich hab` noch nie </string>
     <!-- Kategorie 1 Erklärung -->
     <string name="alter_kategorie_title1">Spielregel: Ich hab` noch nie</string>
     <string name="alter_kategorie_message1">Trinken muss jeder, der es getan hat. Hat es keiner getan, trinkt nur der Spieler, der die Münze geworfen hat. Hier wird in der Gruppe getrunken.</string>
