--- a/app/src/main/res/layout-sw480dp/activity_a_c_bearbeiten.xml
+++ b/app/src/main/res/layout-sw480dp/activity_a_c_bearbeiten.xml
@@ -56,6 +56,7 @@
         android:gravity="start|top"
         android:hint="@string/hint_aufgabe"
         android:inputType="textMultiLine"
+        android:minHeight="48dp"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
         android:textSize="24sp"
